--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notebooks/pandas.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pandas\n",
     "\n",
     "In the NumPy section we dealt with some arrays, whose columns had each a special meaning. For example, the column number 0 could contains values interpreted as years, and column 1 could contain a month, and so on. It is possible to handle the data this way, but in can be hard to remember, which column number corresponds to which variable. Especially, if you later remove some column from the array, then the numbering of the remaining columns changes. One solution to this is to give a descriptive name to each column. These column names stay fixed and attached to their corresponding columns, even if we remove some of the columns. In addition, the rows can be given names as well, these are called *indices* in Pandas.\n",
@@ -15,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +144,14 @@
        "4                   -17.8  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"https://www.cs.helsinki.fi/u/jttoivon/dap/data/fmi/kumpula-weather-2017.csv\")\n",
-    "df.head()   # The head method prints the first 5 rows"
+    "wh = pd.read_csv(\"https://www.cs.helsinki.fi/u/jttoivon/dap/data/fmi/kumpula-weather-2017.csv\")\n",
+    "wh.head()   # The head method prints the first 5 rows"
    ]
   },
   {
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,18 +177,18 @@
        "Name: Snow depth (cm), dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Snow depth (cm)\"].head()     # Using the tab key can help enter long column names"
+    "wh[\"Snow depth (cm)\"].head()     # Using the tab key can help enter long column names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,18 +197,18 @@
        "6.527123287671233"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Air temperature (degC)\"].mean()    # Mean temperature"
+    "wh[\"Air temperature (degC)\"].mean()    # Mean temperature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,18 +312,18 @@
        "4                   -17.8  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.drop(\"Time zone\", axis=1).head()    # Return a copy with one column removed, the original DataFrame stays intact"
+    "wh.drop(\"Time zone\", axis=1).head()    # Return a copy with one column removed, the original DataFrame stays intact"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -423,13 +433,13 @@
        "4                   -17.8  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "wh.head()"
    ]
   },
   {
@@ -881,7 +891,336 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary statistics (tässä vai numpy:ssä)"
+    "## Summary statistics\n",
+    "\n",
+    "The summary statistic methods work in a similar way as their counter parts in NumPy. By default, the aggregation is done over columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Precipitation amount (mm)    1.966301\n",
+       "Snow depth (cm)              0.966480\n",
+       "Air temperature (degC)       6.527123\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wh2 = wh.drop([\"Year\", \"m\", \"d\"], axis=1)  # taking averages over these is not very interesting\n",
+    "wh2.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `describe` method of the `DataFrame` object gives different summary statistics for each (numeric) column. The result is a DataFrame. This method gives a good overview of the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>m</th>\n",
+       "      <th>d</th>\n",
+       "      <th>Precipitation amount (mm)</th>\n",
+       "      <th>Snow depth (cm)</th>\n",
+       "      <th>Air temperature (degC)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>365.0</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>358.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>6.526027</td>\n",
+       "      <td>15.720548</td>\n",
+       "      <td>1.966301</td>\n",
+       "      <td>0.966480</td>\n",
+       "      <td>6.527123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.452584</td>\n",
+       "      <td>8.808321</td>\n",
+       "      <td>4.858423</td>\n",
+       "      <td>3.717472</td>\n",
+       "      <td>7.183934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-17.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>1.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>4.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>2.700000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>19.600000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Year           m           d  Precipitation amount (mm)  \\\n",
+       "count   365.0  365.000000  365.000000                 365.000000   \n",
+       "mean   2017.0    6.526027   15.720548                   1.966301   \n",
+       "std       0.0    3.452584    8.808321                   4.858423   \n",
+       "min    2017.0    1.000000    1.000000                  -1.000000   \n",
+       "25%    2017.0    4.000000    8.000000                  -1.000000   \n",
+       "50%    2017.0    7.000000   16.000000                   0.200000   \n",
+       "75%    2017.0   10.000000   23.000000                   2.700000   \n",
+       "max    2017.0   12.000000   31.000000                  35.000000   \n",
+       "\n",
+       "       Snow depth (cm)  Air temperature (degC)  \n",
+       "count       358.000000              365.000000  \n",
+       "mean          0.966480                6.527123  \n",
+       "std           3.717472                7.183934  \n",
+       "min          -1.000000              -17.800000  \n",
+       "25%          -1.000000                1.200000  \n",
+       "50%          -1.000000                4.800000  \n",
+       "75%           0.000000               12.900000  \n",
+       "max          15.000000               19.600000  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wh.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WHY IS COUNT OF SNOW ONLY 358?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>m</th>\n",
+       "      <th>d</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Time zone</th>\n",
+       "      <th>Precipitation amount (mm)</th>\n",
+       "      <th>Snow depth (cm)</th>\n",
+       "      <th>Air temperature (degC)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>309</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>18</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year   m   d   Time Time zone  Precipitation amount (mm)  \\\n",
+       "74   2017   3  16  00:00       UTC                        1.8   \n",
+       "163  2017   6  13  00:00       UTC                        0.6   \n",
+       "308  2017  11   5  00:00       UTC                        0.2   \n",
+       "309  2017  11   6  00:00       UTC                        2.0   \n",
+       "313  2017  11  10  00:00       UTC                        3.6   \n",
+       "321  2017  11  18  00:00       UTC                       11.3   \n",
+       "328  2017  11  25  00:00       UTC                        8.5   \n",
+       "\n",
+       "     Snow depth (cm)  Air temperature (degC)  \n",
+       "74               NaN                     3.4  \n",
+       "163              NaN                    12.6  \n",
+       "308              NaN                     8.4  \n",
+       "309              NaN                     7.5  \n",
+       "313              NaN                     7.2  \n",
+       "321              NaN                     5.9  \n",
+       "328              NaN                     4.2  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wh[wh.isnull().any(axis=1)]"
    ]
   },
   {
@@ -1825,6 +2164,16 @@
    "source": [
     "## Time series"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notebooks/pandas.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+   ]
   }
  ],
  "metadata": {
@@ -1843,7 +2192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
