Added link to Pandas cheat sheet

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -2169,6 +2169,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Pandas cheat sheet](https://github.com/pandas-dev/pandas/blob/master/doc/cheatsheet/Pandas_Cheat_Sheet.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<!--NAVIGATION-->\n",
     "\n",
     "\n",
