Updated colab links.

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -7,7 +7,7 @@
     "<!--NAVIGATION-->\n",
     "\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notebooks/pandas.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/pandas.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
    ]
   },
   {
@@ -21,6 +21,13 @@
     "The *Pandas* library is build on top of the NumPy library, and it provides a special kind of two dimensional data structure called `DataFrame`. The `DataFrame` allows to give names to the columns, so that one can access a column using its name inplace of the index of the column.\n",
     "\n",
     "The quickly go through few examples to see what is possible with Pandas. It is typical to import the Pandas library as the shorthand `pd`."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {"raw_mimetype": "text/html"},
+   "source": [
+    "<a href='https://colab.research.google.com/github/jttoivon/x/blob/master/pandas.ipynb'><img align='left' src='https://colab.research.google.com/assets/colab-badge.svg' alt='Open in Colab' title='Open and Execute in Google Colaboratory' /></a>"
    ]
   },
   {
@@ -3680,7 +3687,7 @@
     "<!--NAVIGATION-->\n",
     "\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notebooks/pandas.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/pandas.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
    ]
   }
  ],
