--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1046,6 +1046,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (read series)</div>\n",
+    "\n",
+    "Write function `read_series` that reads input lines from the user and return a Series. Each line should contain first the index and then the corresponding value, separated by whitespace. An empty line signals the end of Series.\n",
+    "\n",
+    "Test your function from the `main` function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (operations on series)</div>\n",
+    "\n",
+    "Write function `create_series` that get two lists of floats as parameters. Both lists should have length 3.\n",
+    "The function should first create two Series, `s1` and `s2`. The first series should have values from the first parameter list and have corresponding indices `a`, `b`, and  `c`. The second series should get its values from the second parameter list and have again the corresponding indices `a`, `b`, and  `c`. The function should return the pair of these Series.\n",
+    "\n",
+    "Then, write a function `modify_series` that gets two Series as parameters. It should add to the first Series `s1` a new value with index `d`. The new value should be the same as the value in Series `s2` with index `b`.\n",
+    "Then delete the element from `s2` that has index `b`. Now the first Series should have four values, while the second list has only two values. Adding a new element to a Series can be achieved by assignment, like with dictionaries. Deletion of an element from a Series can be done with the `del` statement.\n",
+    "\n",
+    "Test these functions from the main function. Try adding together the Series returned by the `modify_series` function. The operations on Series use the indices to keep the element-wise operations *aligned*. If for some index the operation could not be performed, the resulting value will be `NaN` (Not A Number).\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (inverse series)</div>\n",
+    "\n",
+    "Write function `inverse_series` that get a Series as a parameter and returns a new series, whose indices and values have swapped roles. Test your function from the `main` function.\n",
+    "\n",
+    "What happens if some value appears multiple times in the original Series? What happens if you use this value to index the resulting Series?\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Onko seuraava pätkä tarpeen?\n",
     "One may notice that there are similarities between Python's dictionaries and Pandas' Series, both can be thought to access values using keys. The difference is that Series requires that the indices have all the same type, and similarly, all the values have the same type. This restriction allows creation of fast data structures.\n",
     "\n",
@@ -1702,6 +1742,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (cities)</div>\n",
+    "\n",
+    "Write function `cities` that returns the following DataFrame of top Finnish cities by population:\n",
+    "\n",
+    "```\n",
+    "                 Population Total area\n",
+    "Helsinki         643272     715.48\n",
+    "Espoo            279044     528.03\n",
+    "Tampere          231853     689.59\n",
+    "Vantaa           223027     240.35\n",
+    "Oulu             201810     3817.52\n",
+    "```\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (powers of series)</div>\n",
+    "\n",
+    "Make function `powers_of_series` that takes a Series and a positive integer `k` as parameters and returns a DataFrame. The resulting DataFrame should have to same index as the input Series. The first column of the dataFrame should be the input Series, the second column should contain the Series raised to power of two. The third column should contain the Series to the power of three, and so on until power of `k`.\n",
+    "\n",
+    "The values should be numbers, but the index can have any type.\n",
+    "Test your function from the `main` function. Example of usage:\n",
+    "\n",
+    "\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (municipal information)</div>\n",
+    "\n",
+    "In the `main` function load a data set of municipal information from the address https://www.cs.helsinki.fi/u/jttoivon/dap/data/statistics/municipal.tsv (from [Statistics Finland](https://pxnet2.stat.fi/PXWeb/pxweb/en/)). Use the function `pd.read_csv`, and note that the separator in a tabulator and the encoding of the file is ISO-8859 (old format for certain European languages).\n",
+    "\n",
+    "Print the shape of the DataFrame and the column names in the following format:\n",
+    "Shape: r,c\n",
+    "Columns: col1, col2, ...\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Accessing columns and rows of a dataframe\n",
     "\n",
     "Even though DataFrames are basically just two dimensional arrays, the way to access their elements is different from NumPy arrays. There are a couple of complications, which we will go through in this section.\n",
@@ -1836,7 +1927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If one indexes with a slice or a boolean mask, then the rows are referred to. Examples of these:"
+    "If one indexes with a slice or a boolean mask, then the **rows** are referred to. Examples of these:"
    ]
   },
   {
@@ -1982,7 +2073,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But there is a better way to achieve this!"
+    "But there is a better way to achieve this, which we will see in the next section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (municipalities of finland)</div>\n",
+    "\n",
+    "Load again the municipal information DataFrame . The rows of the DataFrame correspond to various geographical areas of Finland. The first row is about Finland as a whole, then rows from Akaa to Ääneskoski are municipalities of Finland in alphabetical order. After that some larger regions are listed.\n",
+    "\n",
+    "Write function `municipalities_of_finland` that returns a DataFrame containing only rows about municipalities.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (swedish and foreigners)</div>\n",
+    "\n",
+    "Write function `swedish_and_foreigners` that\n",
+    "\n",
+    "* Reads the municipalities data set\n",
+    "* Takes the subset about municipalities (like in previous exercise)\n",
+    "* Further take a subset of rows that have proportion of swedish speaking people and proportion of foreigners both above 5 % level\n",
+    "* From this data set take only columns about population and the proportions of Swedish speaking people and foreigners, that is three columns.\n",
+    "\n",
+    "Do you see some kind of correlation between the columns about Swedish speaking and foreign people? Do you see a correlation between the columns about the population and the proportion of Swedish speaking people in this subset?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (growing municipalities)</div>\n",
+    "\n",
+    "Write function `growing_municipalities` that gets a DataFrame as parameter and return the proportion municipalities with increasing population.\n",
+    "\n",
+    "Test your function from the `main` function using some subset of the municipalities.\n",
+    "<hr/>"
    ]
   },
   {
@@ -2073,6 +2205,27 @@
    "metadata": {},
    "source": [
     "With `iloc` everything works like with NumPy arrays: indexing, slicing, fancy indexing, masking and their combinations. With `loc` it is the same but now the names in the explicit indices are used for specifying rows and columns. Make sure your understand why the above examples work as they do!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (subsetting with loc)</div>\n",
+    "\n",
+    "Write function `subsetting_with_loc` that in one go takes the subset of municipalities from Akaa to Ääneskoski and restricts it to columns: \"Population\", \"Share of Swedish-speakers of the population, %\", and \"Share of foreign citizens of the population, %\".\n",
+    "The function should return this content as a DataFrame. Use the attribute `loc`.\n",
+    "\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X ()</div>\n",
+    "\n"
    ]
   },
   {
