--- a/basics.ipynb
+++ b/basics.ipynb
@@ -4224,6 +4224,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\">Exercise X (file listing)</div>\n",
+    "\n",
+    "The file `src/listing.txt` contains a list of files with one line per file. Each line contains seven fields: access rights, number of references, owner's name, name of owning group, file size, date, filename. These fields are separated with one or more spaces. Note that there may be spaces also within these seven fields.\n",
+    "\n",
+    "Write function `file_listing` that loads the file `src/listing.txt`. It should return a list of tuples (size, month, day, hour, minute, filename). Use regular expressions to do this.\n",
+    "\n",
+    "An example: for line\n",
+    "```\n",
+    "-rw-r--r-- 1 jttoivon hyad-all   25399 Nov  2 21:25 exception_hierarchy.pdf\n",
+    "```\n",
+    "the function should create the tuple `(25399, \"Nov\", 2, 21, 25, \"exception_hierarchy.pdf\")`.\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\">Exercise X (red green blue)</div>\n",
+    "\n",
+    "The file `src/rgb.txt` contains names of colors and their numerical representations in RGB format. The RBG format allows a color to be represented as a mixture of red, green, and blue components. Each component can have an integer value in the range [0,255]. Each line in the file contains four fields: red, green, blue, and colorname.\n",
+    "Each field is separated by some amount of whitespace (tab or space in this case).\n",
+    "The text file is formatted to make it print nicely, but that makes it harder to process by a computer. Note that some color names can also contain a space character.\n",
+    " \n",
+    "Write function `red_green_blue` that reads the file `rgb.txt` from the folder `src`. Clean-up the file so that in the output there are four fields separated by a single tab character (`\\t`). Remove the irrelevant first line of the file. The function should return a list of strings.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <div class=\"alert alert-info\">Exercise X (word frequencies)</div>\n",
     "\n",
     "Create function `word_frequencies` that gets a filename as a parameter and returns a dict with the word frequencies. In the dictionary the keys are the words and the corresponding values are the number of times that word occurred in the file specified by the function parameter. Read all the lines from the file and split the lines into words using the `split()` method. Further, remove punctuation from the words using the `strip('\"[],.:?!')` method call.\n",
@@ -5019,7 +5052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
